# trading-algo-playground

./: .gitignore  README.md  docker-compose.yml  ruff.toml
freqtrade/: README.md  config.json
freqtrade/strategies/: stoch_ema.py
hyper/: .gcloudignore  README.md  alert.json  main.py  requirements.txt
tradingview-python-connector/: alert.json  main.py  requirements.txt
tradingview-python-connector/exchange/: exchange.py  hyperliquid.py
tradingview-python-connector/integration_tests/: test_hyperliquid.py
tradingview-python-connector/order/: action.py  order.py  position.py  test_order.py
tradingview-rust-connector/: Cargo.toml  Dockerfile
tradingview-rust-connector/src/: lib.rs  main.rs  types.rs
tradingview-rust-connector/src/exchanges/: exchange.rs  hyperliquid.rs  mod.rs
