[package]
name = "tradingview-rust-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
ethers = "0.17"
hyperliquid_rust_sdk = "0.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
